First three flows functional

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+src/
+document_tfidf_vectorizer.pickel
+tv_doc_corpus_data.pickel
+tv_section_corpus_data.pickel
